apps/excalidraw/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: excalidraw
  namespace: excalidraw
spec:
  parentRefs:
    - name: homelab
      namespace: envoy-gateway-system
  hostnames:
    - "draw.int.kyledev.co"
    - "excalidraw.int.kyledev.co"
  rules:
    - backendRefs:
        - name: excalidraw
          port: 80
